# Naja

./: Cargo.toml  README.md  benchmark_linrg.py
docs/: index.md  io.md  pipeline.md
docs/algorithms/: dbscan.md  dtree.md  gmm.md  index.md  lda.md  linrg.md  logrg.md  svm.md
docs/components/: compute.md  data.md  error.md  metrics.md  preprocessing.md  regularization.md  traits.md
docs/core/: compute.md  data.md  error.md  index.md  traits.md
docs/guide/: quickstart.md
docs/io/: index.md
docs/metrics/: classifier.md  clusterer.md  index.md  regressor.md
docs/pipeline/: index.md
docs/preprocessing/: index.md  scaler.md
examples/: linreg_demo.rs  linrg.rs  linrg_demo.rs  logrg.rs  utils.rs
notes/: gbm.md  linrg.md  nbayes.md  pca.md
notes/algorithms/: index.md  kmeans.md  knn.md  rndfst.md  xgb.md
src/: lib.rs
src/algorithms/: linreg.rs  linrg.rs  mod.rs
src/algorithms/linrg/: fit.rs  mod.rs  model.rs  predict.rs  solution.rs
src/algorithms/logrg/: fit.rs  mod.rs  model.rs
src/core/: error.rs  mod.rs  regularization.rs  traits.rs
src/core/compute/: mod.rs  ops.rs  types.rs
src/core/data/: dataset.rs  mod.rs  validate.rs
src/metrics/: classification.rs  clusterer.rs  clustering.rs  mod.rs  regression.rs  regressor.rs
src/pipeline/: mod.rs
src/preprocessing/: mod.rs  scaler.rs
src/preprocessing/scaler/: minmax.rs  mod.rs  robust.rs  standard.rs
tests/: fixtures.rs  lib.rs  linrg_test.rs
tests/algorithms/linrg/: mod.rs
tests/algorithms/logrg/: mod.rs
tests/common/: mod.rs
tests/metrics/: classifier.rs  regressor.rs
(+4 files in other folders)
