[package]
name = "naja"
version = "1.7.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
ndarray = "0.16"
ndarray-stats = "0.6"
rand = "0.8"
rand_chacha = "0.3"

faer = { version = "0.21", optional = true }
argmin = { version = "0.10", optional = true }

[features]
default = ["faer-backend"]
faer-backend = ["dep:faer"]
argmin-solver = ["dep:argmin"]

[dev-dependencies]
rand = "0.8"
approx = "0.5"
